--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ gdal = "3.4.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.1.3"
+black = {extras = ["d"], version = "^22.10.0"}
 
 [build-system]
 requires = ["poetry-core"]
